<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactsList</string>
    <string name="action_settings">Settings</string>
    <string name="contacts_title">Contacts</string>
    <string name="add_contact">Add New Contact</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="save_contact">Save</string>
    <string name="contact_name">Name</string>
    <string name="contact_lastname">LastName</string>
    <string name="contact_address">Address</string>
    <string name="contact_email">Email</string>
    <string name="contact_mobile">Mobile</string>
    <string name="contact_work">Work</string>
    <string name="title_activity_edit_contact">EditContact</string>
    <string name="edit_contact">SAVE</string>
     <string name="delete_contact">DELETE</string>
    

</resources>
